Wrapped content inside its own scroller, preventing overlapping content

--- a/collaborative/src/components/App/App.module.css
+++ b/collaborative/src/components/App/App.module.css
@@ -8,3 +8,7 @@
   flex-direction: column;
   flex: 1;
 }
+
+.Content_Main {
+  overflow-y: auto;
+}
